<menu xmlns:android="http://schemas.android.com/apk/res/android"
	  xmlns:app="http://schemas.android.com/apk/res-auto"
	  xmlns:tools="http://schemas.android.com/tools"
	  tools:context="com.qjjs.us.qjjs.MainActivity">
	<item
			android:id="@+id/action_new"
			android:title="@string/action_new" />
	<item
			android:id="@+id/action_saved"
			android:enabled="true"
			android:title="@string/action_saved" />
	<item
		android:id="@+id/action_sync"
		android:title="@string/action_sync" />
	<item
			android:id="@+id/action_settings"
			android:title="@string/action_settings">
		<menu >
			<item
				android:id="@+id/action_server_url"
				android:title="@string/action_server_url" />
			<item
				android:id="@+id/action_template"
				android:title="@string/action_template" />
		</menu>
	</item>
</menu>
